[tool.poetry]
name = "dlnlp-assignment-24"
version = "0.1.0"
description = ""
authors = ["Harding, Matt <matt.harding@refinitiv.com>"]
readme = "README.md"
packages = [{include = "dlnlp_assignment_24"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
jupyter = "^1.0.0"
datasets = "^2.19.1"
nltk = "^3.8.1"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
